# action-test

./: .coveragerc  .gitignore  .gitignore.new  LICENSE  README.md  README.new  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
.pre-commit-hooks/: make-autodocs.py
docs/: conf.py  index.rst
docs/ref/: modules.rst  saltext.just_a_test.rst
docs/ref/modules/: all.rst  saltext.just_a_test.modules.blerp.rst
docs/ref/states/: all.rst
src/saltext/just_a_test/: version.py
src/saltext/just_a_test/modules/: blerp.py
tests/: conftest.py
tests/integration/: test_blerp.py
tests/unit/: test_sample.py
