[metadata]
name = saltext.just_a_test
description = Just a test
long_description = file: README.md
long_description_content_type = text/markdown
author = Wayne Werner
author_email = wayne@waynewerner.com
keywords = salt-extension
url = https://github.com/waynew/action-test
project_urls =
    Source=https://github.com/waynew/action-test
    Tracker=https://github.com/waynew/action-test/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
    wheel
    setuptools>=50.3.2
    setuptools_scm[toml]>=3.4
    setuptools-declarative-requirements
install_requires =
    salt>=3002
    pyvmomi==7.0.2

[options.extras_require]
tests =
  pytest>=6.1.0
  pytest-cov
  pytest-salt-factories>=0.121.1
dev =
  nox
release =
  twine
  wheel
docs =
  sphinx
  sphinx-material-saltstack
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.just_a_test = saltext.just_a_test

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
